force-app/main/default/objects/clofor_com_cfs__MTRSVCProductPricing__c/fields/clofor_com_cfs__MaterialID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaterialID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MATERIAL ID</label>
    <referenceTo>clofor_com_cfs__Material__c</referenceTo>
    <relationshipName>MATERIAL_PRODUCT</relationshipName>
    <type>Lookup</type>
</CustomField>