force-app/main/default/objects/clofor_com_cfs__MTRSVCProductPricing__c/fields/clofor_com_cfs__MaterialSellingUnitPriceLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaterialSellingUnitPriceLocalFormu__c</fullName>
    <formula>clofor_com_cfs__MaterialID__r.clofor_com_cfs__StandardSellingUnitPriceLocal__c</formula>
    <label>MATERIAL SELLING UNIT PRICE(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>