force-app/main/default/objects/clofor_com_cfs__MTRSVCProductPricing__c/fields/clofor_com_cfs__MaterialSellingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaterialSellingUnitPriceUSDFormu__c</fullName>
    <formula>clofor_com_cfs__MaterialID__r.clofor_com_cfs__StandardSellingUnitPriceUSD__c</formula>
    <label>MATERIAL SELLING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>