force-app/main/default/objects/clofor_com_cfs__MTRSVCProductPricing__c/fields/clofor_com_cfs__ProductID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductID__c</fullName>
    <label>PRODUCT ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__PRODUCT__c.clofor_com_cfs__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__PRODUCT__c</referenceTo>
    <relationshipLabel>MTR/SVC LINE+PRODUCT</relationshipLabel>
    <relationshipName>MaterialProduct</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>