force-app/main/default/objects/clofor_com_cfs__MTRSVCProductPricing__c/fields/clofor_com_cfs__ServiceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ServiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SERVICE ID</label>
    <referenceTo>clofor_com_cfs__ServiceMaster__c</referenceTo>
    <relationshipName>MATERIAL_PRODUCT</relationshipName>
    <type>Lookup</type>
</CustomField>