force-app/main/default/objects/clofor_com_cfs__MTRSVCProductPricing__c/fields/clofor_com_cfs__SVCBuyingUnitPriceUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SVCBuyingUnitPriceUSDFormu__c</fullName>
    <formula>clofor_com_cfs__ServiceID__r.clofor_com_cfs__BuyingUnitPriceUSD__c</formula>
    <label>SVC BUYING UNIT PRICE(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>