force-app/main/default/objects/clofor_com_cfs__MTRSVCProductPricing__c/fields/clofor_com_cfs__SVCSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SVCSellingUnitPriceLocal__c</fullName>
    <label>SVC SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>