force-app/main/default/objects/clofor_com_cfs__MTRSVCProductPricing__c/fields/clofor_com_cfs__SVCSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SVCSellingUnitPriceUSD__c</fullName>
    <label>SVC SELLING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>